force-app/main/default/objects/User/fields/E_Stamping__c.field-meta.xml
<CustomField>
    <fullName>E_Stamping__c</fullName>
    <label>E-Stamping</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>