force-app/main/default/objects/User/fields/Store_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Content_Version_Id__c</fullName>
    <label>Store Content Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>