force-app/main/default/objects/User/fields/User_Signature1__c.field-meta.xml
<CustomField>
    <fullName>User_Signature1__c</fullName>
    <label>User Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>