force-app/main/default/objects/User/fields/User_Signature__c.field-meta.xml
<CustomField>
    <fullName>User_Signature__c</fullName>
    <label>Base 64 Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>